--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "description": "Easily copy and paste emojis.",
   "author": "Taehong Kim <public.devhong@gmail.com>",
   "dependencies": {
+    "antd": "^4.16.10",
+    "axios": "^0.21.1",
     "gatsby": "^3.10.2",
     "gatsby-plugin-gatsby-cloud": "^2.10.1",
     "gatsby-plugin-image": "^1.10.1",
