--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "author": "Taehong Kim <public.devhong@gmail.com>",
   "dependencies": {
     "@ant-design/icons": "^4.6.2",
-    "antd": "^4.16.10",
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
     "axios": "^0.21.1",
     "gatsby": "^3.10.2",
     "gatsby-plugin-gatsby-cloud": "^2.10.1",
